Refactoring POM