@@ -29,6 +29,7 @@
     <build>
         <pluginManagement>
             <plugins>
+                <!--Compiler-->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
@@ -37,11 +38,37 @@
                         <target>${maven.compiler.target}</target>
                     </configuration>
                 </plugin>
+                <!--Jetty-->
+                <plugin>
+                    <groupId>org.eclipse.jetty</groupId>
+                    <artifactId>jetty-maven-plugin</artifactId>
+                    <version>9.1.3.v20140225</version>
+                    <configuration>
+                        <scanIntervalSeconds>0</scanIntervalSeconds>
+                        <webApp>
+                            <contextPath>/</contextPath>
+                        </webApp>
+                        <stopPort>9847</stopPort>
+                        <stopKey>tms-local</stopKey>
+                        <jvmArgs>
+                            -Xmx1024m
+                            -XX:MaxPermSize=512m
+                        </jvmArgs>
+                        <goal>run-forked</goal>
+                    </configuration>
+                </plugin>
+
             </plugins>
         </pluginManagement>
     </build>
 
     <dependencies>
+        <!--Java Servlet API-->
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>7.0</version>
+        </dependency>
         <!--JUnit-->
         <dependency>
             <groupId>junit</groupId>
